--- a/daily-report/style.css
+++ b/daily-report/style.css
@@ -8,7 +8,7 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  font-family: "Noto Sans JP", Arial, Helvetica, sans-serif;
   display: flex;
   place-items: center;
   min-width: 320px;
