--- a/daily-report/style.css
+++ b/daily-report/style.css
@@ -79,3 +79,53 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.form {
+  border: 2px sold #000;
+  padding: 20px;
+  max-width: 780px;
+  width: 100%;
+  margin: 0 auto;
+}
+.form-list {
+  display: flex;
+  margin-bottom: 10px;;
+}
+.form-title {
+  font-weight: bold;
+  cursor: pointer;
+  width: 30%;
+}
+.form-field {
+  width: 70%;
+}
+.form-button {
+  text-align: center;
+}
+.input-field {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #000;
+}
+.button {
+  border: 0;
+  font-size: 18px;
+  padding: 10px 20px;
+  font-weight: bold;
+  cursor: pointer;
+  background-color: #333;
+  color: #fff;
+  border-radius: 5px;
+  transition: opacity 0.25s;
+}
+.button:hover {
+  opacity: 0.8;
+}
+.history-link {
+  margin-top: 20px;
+  text-align: right;
+}
+.history-link > a {
+  margin: 0 5px;
+  color: #000;
+}
